# agent-team-template

./: .fips-template.yaml  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.claude/commands/: design-team.md
.claude/commands/scripts/: bpmn_parser.py  generate_outputs.py
.github/workflows/: publish.yml
docs/: concept.md
planning/: design-notes.md
retrospectives/2026-05-22_initial-implementation/: RETRO.md
src/agent_team_design/: __init__.py  bpmn.py  cli.py  outputs.py  roles.py  trust.py
tests/: test_bpmn_parser.py  test_generate_outputs.py
tests/fixtures/: sample.bpmn
tests/fixtures/sample-roles/: approval-authority.md  credit-analyst.md  intake-coordinator.md
