[project]
name = "agent-team-design"
version = "0.1.0"
description = "Organizational design for multi-agent teams — derive roles from domain constraints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agent-team-design = "agent_team_design.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_team_design"]

[tool.pytest.ini_options]
testpaths = ["tests"]
